# sdam

./: .travis.yml  README.md  cabal.project.freeze  sdam.cabal  shell.nix
examples/: morte.sdam  morte.sdam-schema  morte1.sd
src/Sdam/: Core.hs  Fingerprint.hs  MetaVar.hs  Name.hs  NameInfo.hs  Parser.hs  Printer.hs  Resolve.hs  Syn.hs  Validator.hs
