cabal-version: 2.1
name: sdam
version: 0
build-type: Simple

library
  exposed-modules:
    Sdam.Core
    Sdam.Parser
    Sdam.Resolve
    Sdam.Fingerprint
    Sdam.Name
    Sdam.NameInfo
  build-depends: base, containers, megaparsec, parser-combinators
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-partial-type-signatures
