cabal-version: 2.1
name: sdam
version: 0
build-type: Simple

library
  exposed-modules:
    Sdam.Core
    Sdam.Parser
    Sdam.Name
  build-depends:
    base, containers, unordered-containers, hashable, text, megaparsec,
    parser-combinators
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-partial-type-signatures
