cabal-version: 2.2
name: sdam
version: 0
build-type: Simple

library
  exposed-modules:
    Sdam.Syn
    Sdam.Core
    Sdam.Parser
    Sdam.Printer
    Sdam.Validator
  build-depends:
    base, containers, unordered-containers, hashable, text, transformers,
    megaparsec, parser-combinators, pretty
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-partial-type-signatures
